# MPU

./: .gitattributes  README.md  notes.md
Y1S1/introduction to  computing/: pre-mypart.docx
Y1S1/introduction to business/: Ch01 Overview of Economic Systems and Business.pptx  Group Assignment _MBUS 100_ 22_23_1st_Sem (1).docx  Group Assignment _MBUS 100_ 22_23_1st_Sem _p2211355.docx
Y1S1/programming/: Highlights_BookExample_CheckPoint_Software.docx
Y1S2/Computer architecture/: Homework5 answer.docx  ch2-1 bnary sytem.ppt  ch2-2 boolean algebra and logic gates.ppt  ch2-3 combinational logic.ppt
Y1S2/English2/: 01 Wordbank Unit 5.docx  16 Wordbank Unit 7.docx  CV draft.md
Y1S2/algorithms/: FInal Review.docx  FinalReview.md  Notes.md  p2211355- Assignment3.docx
Y1S2/data communication/: Final Revision.docx
Y2S1/English/: P2211355_MENG211_211_writing_ZC.docx
Y2S1/Operating Systems/osProject/: Cargo.toml  readme.md
Y2S1/Operating Systems/osProject/p2211355 - final project/src/: dir_info.rs  dir_size.rs  find_string.rs
Y2S1/Operating Systems/osProject/p2211355 - final project/testfile/: a.txt
Y2S1/Operating Systems/osProject/src/: find_files.rs  main.rs
Y2S2/Database system management/: Notes.md
Y2S2/English/: .~lock.Presentation of GPU.docx#  Individual presentation.odp  Individual presentation.pptx  Presentation of GPU.docx  good_habits.md  ~$esentation of GPU.docx  ~WRL3704.tmp
Y2S2/Internet Programming/: notes.md  review.md
Y2S2/Network and Systems/: Notes.md
Y2S2/Obejct Oriented Technology/: notes.md
Y2S2/Software Engineering/: note.md  (+1 more)
(+40 files in other folders)
