[package]
name = "osProject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
crossterm = "0.27.0"
ratatui = "0.24.0"
once_cell = "1.8.0"
[profile.release]
path = "target/release/P2211355osProject"
